style.css
* {
  box-sizing: border-box;
}

body {
  margin: 0;
  padding: 0;
}
/* Main hero section */
.hero {
  height: 100vh;
}

/* Parallax effect settings for main hero section */

.main {
  height: 100vh;
  perspective: 2px;
  overflow-x: hidden; /* must have overflow-x for the parallax effect to work */
}
.parallax {
  position: relative;
  overflow: hidden;
}

.parallax::after {
  content: " ";
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  transform: translateZ(-1px) scale(1.5);
  z-index: -1;
}
.section {
  display: block;
}

.important {
  height: 300px;
  width: 300px;
  /* background: gray; */
}

.absolute-center {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
}

/* style for 'story section' */

.story {
  height: 100vh;
  background: #F7E3E7;
}

/* style for pictures gallery */
.gallery {
  padding: 5px;
  overflow: auto;
}

.gallery figure a {
  display: block;  /* to wrap around the img tag and take up all height */
  background-position: center bottom;
  background-size: cover; /* to fit the background to cover all the element */
  border-radius: 5px;
}

figure {
  float: left;
  width: calc(100%/3);
  padding: 5px;
  margin: 0;
}

.img-frame {
  width: 100%;
}



/* Background images */
.img-1 {
  background: url("")
}

.img-main-section::after {
  background: url("images/banh-cuoi.jpg");
  background-position: center bottom;
  background-size: cover;
}

